--- a/main.css
+++ b/main.css
@@ -7,6 +7,12 @@
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+main {
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+}
+
 h1 {
   text-align: center;
 }
@@ -26,21 +32,20 @@ h1 {
 }
 
 .cards {
-  height: 80vw;
-  width: 80vw;
+  width: 95vw;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 2px;
-  margin: 10vw;
+  margin: 5px;
   text-align: center;
+  gap: 1px;
 }
 
 .cards .card {
-  border: red 2px solid;
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
+  border: #9acd32 2px solid;
 }
 
 .cards .card:hover {
@@ -48,19 +53,15 @@ h1 {
 }
 
 .show {
-  background-color: orange;
+  background-color: #ffd700;
 }
 
 .matched {
-  background-color: green;
+  background-color: #421558;
 }
 
 .matched:hover {
-  cursor: none;
-}
-
-.close {
-  background-color: pink;
+  pointer-events: none;
 }
 
 #pause:hover {
@@ -69,5 +70,19 @@ h1 {
 
 #restart:hover {
   cursor: pointer;
+}
+
+@media only screen and (min-width: 375px) {
+  .cards .card {
+    height: 100px;
+    width: 100px;
+  }
+}
+
+@media only screen and (min-width: 550px) {
+  .cards .card {
+    height: 120px;
+    width: 120px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
