--- a/main.scss
+++ b/main.scss
@@ -2,67 +2,87 @@
     margin: 0px;
     padding:0px;
     box-sizing: border-box;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: sansita -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+body{
+    display: inline-block;  
+    
+}
 main{
-    //background-image: url('./images/shopkin.jpg');
-    background-size: cover;
-    height: 100vh;
-    width: 100vw;
+    // background-image: url('./images/shopkin.jpg');
+    background-color: 	#cd1076;
+    height:100vh;
+    font-size: 20px;
+    font-weight: bold;
+    color:#421558 ;
 }
 
-h1{
+ #top {
     text-align: center;
+    background-color:#9acd32 ;
+    padding:5px;
+ }
+
+  .title {
+    font-weight: 900;
+    font-size: 3.5em;
+  }
+  
+  .title .letter {
+    display: inline-block;
+    line-height: 1em;
+  }
+
+button {
+    width:20vw;
+    height:4vh;
+    background-color:#ffd700;
+    border-radius: 5px;
+    color:#421558;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .menu {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    padding: 10px;
+    padding: 15px;
+    width: 100vw;
 }
 
 .cards{
     width:95vw;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin: 5px;
+    margin: 20px;
     text-align: center;
-    gap:1px;    
+    gap:5px;    
     // background-color: #f03a9c ;  
 
    .card {  
-        width: 80px;
-        height: 80px;  
-        border:#9acd32 2px solid;
-            
+        border:#9acd32 4px solid;
+        border-radius: 10px;    
         &:hover {
             cursor: pointer;
         }
     }
 }
 
-// img{
-//     object-fit: cover;
-//     opacity:0.5;
-// }
 .start{
     
 }
 
 .show {
-background-color:#ffd700;
+pointer-events: none;
 }
 
 .matched{
-background-color:#421558;
     &:hover{
         pointer-events: none;
     }
 }
-
-
 
 #pause{
     &:hover {
@@ -81,12 +101,12 @@ background-color:#421558;
 }
 
 .finish{
-    border: 2px red solid;
+    border: 2px #9acd32 solid;
+    background-color: #ffd700;
     width:200px;
     height: 200px;
     display: unset;
 }
-
 @media only screen and (min-width:375px) {
     .cards .card {
         height: 100px;
