--- a/main.scss
+++ b/main.scss
@@ -5,15 +5,9 @@
     font-family: sansita -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-body{
-    display: inline-block;  
-    
-}
 main{
-    // background-image: url('./images/shopkin.jpg');
     background-color: 	#cd1076;
     height:100vh;
-    font-size: 20px;
     font-weight: bold;
     color:#421558 ;
 }
@@ -26,7 +20,7 @@ main{
 
   .title {
     font-weight: 900;
-    font-size: 3.5em;
+    font-size: 2.5em;
   }
   
   .title .letter {
@@ -35,13 +29,14 @@ main{
   }
 
 button {
-    width:20vw;
+    width:15vw;
     height:4vh;
     background-color:#ffd700;
     border-radius: 5px;
     color:#421558;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 12px;
+    margin:5px;
 }
 
 .menu {
@@ -49,29 +44,27 @@ button {
     flex-direction: row;
     justify-content: space-evenly;
     padding: 15px;
-    width: 100vw;
+    width: 320px
 }
 
 .cards{
-    width:95vw;
+    width:320px;;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin: 20px;
+    margin: 10px;
     text-align: center;
-    gap:5px;    
+    gap:3px;    
     // background-color: #f03a9c ;  
 
    .card {  
         border:#9acd32 4px solid;
         border-radius: 10px;    
+        height: 60px;
+        width: 60px;
         &:hover {
             cursor: pointer;
         }
     }
-}
-
-.start{
-    
 }
 
 .show {
@@ -109,13 +102,124 @@ pointer-events: none;
 }
 @media only screen and (min-width:375px) {
     .cards .card {
-        height: 100px;
-        width: 100px;
+        height: 70px;
+        width: 70px;
 } 
 }
+@media only screen and (min-width:425px) {
+    .cards .card {
+        height: 80px;
+        width: 80px;
+} 
+
+    .cards{    
+        width:380px;
+}
+
+    .menu{    
+    width:390px;
+}
+}
 @media only screen and (min-width:550px) {
+    .cards .card {
+        height: 110px;
+        width: 110px;
+} 
+.cards{    
+    width:500px;
+}
+
+.menu{    
+width:500px;
+}
+
+button{
+    font-size: 15px;;
+}
+}
+@media only screen and (min-width:600px) {
     .cards .card {
         height: 120px;
         width: 120px;
 } 
+.cards{    
+    width:85vw;
+}
+
+.menu{    
+width:85vw;
+}
+}
+@media only screen and (min-width:650px) {
+    .cards .card {
+        height: 135px;
+        width: 135px;
+} 
+}
+@media only screen and (min-width:760px) {
+    .cards .card {
+        height: 140px;
+        width: 140px;
+} 
+.cards{    
+    width:90vw;
+}
+
+.menu{    
+width:90vw;
+}
+}
+
+@media only screen and (min-width:950px) {
+    .cards .card {
+        height: 180px;
+        width: 180px;
+} 
+.cards{    
+    width:95vw;
+}
+
+.menu{    
+width:95vw;
+}
+
+button{
+    font-size: 20px;;
+}
+}
+@media only screen and (min-width:0124px) {
+    .cards .card {
+        height: 210px;
+        width: 210px;
+} 
+.cards{    
+    width:95vw;
+}
+
+.menu{    
+width:95vw;
+}
+
+button{
+    font-size: 21px;
+    padding:-2px;
+}
+}
+@media only screen and (min-width:1440px) {
+    .cards .card {
+        height: 270px;
+        width: 270px;
+} 
+.cards{    
+    width:95vw;
+}
+
+.menu{    
+width:95vw;
+}
+
+button{
+    font-size: 23px;
+    height:40px;
+}
 }
