end of game alert added

--- a/main.css
+++ b/main.css
@@ -62,7 +62,7 @@ button {
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr 1fr;
-  margin: 10px;
+  margin-left: 1px;
   text-align: center;
   gap: 3px;
 }
@@ -112,7 +112,7 @@ button {
     width: 70px;
   }
   .cards {
-    margin-left: 30px;
+    margin-left: 5px;
   }
 }
 
@@ -129,6 +129,16 @@ button {
   }
 }
 
+@media only screen and (min-width: 490px) {
+  .cards .card {
+    height: 90px;
+    width: 90px;
+  }
+  .cards {
+    margin-left: 8px;
+  }
+}
+
 @media only screen and (min-width: 550px) {
   .cards .card {
     height: 110px;
@@ -136,7 +146,7 @@ button {
   }
   .cards {
     width: 500px;
-    margin-left: 55px;
+    margin-left: 10px;
   }
   .menu {
     width: 500px;
@@ -172,7 +182,8 @@ button {
     width: 140px;
   }
   .cards {
-    width: 90vw;
+    width: 80vw;
+    margin-left: 40px;
   }
   .menu {
     width: 90vw;
@@ -185,10 +196,10 @@ button {
     width: 170px;
   }
   .cards {
-    width: 95vw;
+    margin-left: 45px;
   }
   .menu {
-    width: 95vw;
+    width: 85vw;
   }
   button {
     font-size: 20px;
@@ -200,15 +211,11 @@ button {
 
 @media only screen and (min-width: 1024px) {
   .cards .card {
-    height: 150px;
-    width: 150px;
+    height: 160px;
+    width: 160px;
   }
   .cards {
-    width: 90vw;
-    margin-left: 60px;
-  }
-  .menu {
-    width: 95vw;
+    margin-left: 100px;
   }
   button {
     font-size: 21px;
@@ -218,11 +225,11 @@ button {
 
 @media only screen and (min-width: 1440px) {
   .cards .card {
-    height: 270px;
-    width: 270px;
+    height: 200px;
+    width: 200px;
   }
   .cards {
-    width: 95vw;
+    margin-left: 160px;
   }
   .menu {
     width: 95vw;
