--- a/main.css
+++ b/main.css
@@ -120,6 +120,7 @@ button {
   background-color: #ffd700 0, 0, 0;
   background-color: #421558 0, 0, 0, 0.4;
   /* Black w/ opacity */
+  text-align: center;
 }
 
 .modal-content {
@@ -129,7 +130,7 @@ button {
   border: 1px solid #421558;
   border-radius: 20px;
   height: 25%;
-  width: 80%;
+  width: 67%;
   color: #421558;
   font-size: 26px;
   font-weight: bold;
@@ -139,7 +140,7 @@ button {
 .close {
   color: #cd1076;
   float: right;
-  font-size: 45px;
+  font-size: 46px;
   font-weight: bold;
 }
 
@@ -171,6 +172,9 @@ button {
   .menu {
     width: 390px;
   }
+  .modal-content {
+    font-size: 30px;
+  }
 }
 
 @media only screen and (min-width: 490px) {
@@ -180,6 +184,9 @@ button {
   }
   .cards {
     margin-left: 40px;
+  }
+  .modal-content {
+    font-size: 35px;
   }
 }
 
@@ -198,6 +205,9 @@ button {
   button {
     font-size: 15px;
   }
+  .modal-content {
+    font-size: 41px;
+  }
 }
 
 @media only screen and (min-width: 600px) {
@@ -213,7 +223,7 @@ button {
     width: 85vw;
   }
   .modal-content {
-    padding: 40px;
+    padding: 44px;
     font-size: 36px;
   }
   .close {
@@ -225,6 +235,10 @@ button {
   .cards .card {
     height: 135px;
     width: 135px;
+  }
+  .modal-content {
+    font-size: 52px;
+    height: 40%;
   }
 }
 
@@ -242,8 +256,8 @@ button {
   }
   .modal-content {
     padding: 50px;
-    font-size: 46px;
-    height: 30%;
+    font-size: 61px;
+    height: 50%;
   }
   .close {
     font-size:  35px;
@@ -270,8 +284,8 @@ button {
   }
   .modal-content {
     padding: 50px;
-    font-size: 46px;
-    height: 30%;
+    font-size: 76px;
+    height: 60%;
   }
   .close {
     font-size:  35px;
@@ -295,8 +309,8 @@ button {
   }
   .modal-content {
     padding: 70px;
-    font-size: 56px;
-    height: 30%;
+    font-size: 81px;
+    height: 50%;
   }
   .close {
     font-size:  65px;
@@ -317,6 +331,9 @@ button {
   button {
     font-size: 23px;
     height: 40px;
+  }
+  .modal-content {
+    font-size: 114px;
   }
 }
 /*# sourceMappingURL=main.css.map */
