--- a/main.css
+++ b/main.css
@@ -10,6 +10,7 @@
 main {
   background-color: #cd1076;
   height: 100vh;
+  width: 100vw;
   font-weight: bold;
   color: #421558;
 }
@@ -30,6 +31,10 @@ main {
   line-height: 1em;
 }
 
+p {
+  font-size: 15px;
+}
+
 button {
   width: 15vw;
   height: 4vh;
@@ -38,7 +43,6 @@ button {
   color: #421558;
   font-weight: bold;
   font-size: 12px;
-  margin: 5px;
 }
 
 .menu {
@@ -49,11 +53,12 @@ button {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  padding: 15px;
-  width: 320px;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  width: 100vw;
+  margin: 0 auto;
 }
 
 .cards {
@@ -62,7 +67,7 @@ button {
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr 1fr;
-  margin-left: 5px;
+  margin: 0 auto;
   text-align: center;
   gap: 3px;
 }
@@ -126,11 +131,11 @@ button {
 .modal-content {
   background-color: #ffd700;
   margin: auto;
-  padding: 25px;
+  padding: 15px;
   border: 1px solid #421558;
   border-radius: 20px;
-  height: 25%;
-  width: 67%;
+  height: 20%;
+  width: 68%;
   color: #421558;
   font-size: 26px;
   font-weight: bold;
@@ -139,7 +144,7 @@ button {
 
 .close {
   color: #cd1076;
-  float: right;
+  float: center;
   font-size: 46px;
   font-weight: bold;
 }
@@ -156,8 +161,8 @@ button {
     height: 70px;
     width: 70px;
   }
-  .cards {
-    margin-left: 25px;
+  .modal-content {
+    font-size: 30px;
   }
 }
 
@@ -174,6 +179,7 @@ button {
   }
   .modal-content {
     font-size: 30px;
+    width: 60%;
   }
 }
 
@@ -182,11 +188,9 @@ button {
     height: 90px;
     width: 90px;
   }
-  .cards {
-    margin-left: 40px;
-  }
   .modal-content {
     font-size: 35px;
+    width: 52%;
   }
 }
 
@@ -197,7 +201,6 @@ button {
   }
   .cards {
     width: 500px;
-    margin-left: 30px;
   }
   .menu {
     width: 500px;
@@ -207,6 +210,7 @@ button {
   }
   .modal-content {
     font-size: 41px;
+    width: 47%;
   }
 }
 
@@ -217,7 +221,6 @@ button {
   }
   .cards {
     width: 85vw;
-    margin-left: 35px;
   }
   .menu {
     width: 85vw;
@@ -225,6 +228,7 @@ button {
   .modal-content {
     padding: 44px;
     font-size: 36px;
+    width: 43%;
   }
   .close {
     font-size:  35px;
@@ -238,7 +242,7 @@ button {
   }
   .modal-content {
     font-size: 52px;
-    height: 40%;
+    width: 39%;
   }
 }
 
@@ -249,7 +253,6 @@ button {
   }
   .cards {
     width: 80vw;
-    margin-left: 75px;
   }
   .menu {
     width: 90vw;
@@ -258,6 +261,7 @@ button {
     padding: 50px;
     font-size: 61px;
     height: 50%;
+    width: 34%;
   }
   .close {
     font-size:  35px;
@@ -269,11 +273,11 @@ button {
     height: 170px;
     width: 170px;
   }
-  .cards {
-    margin-left: 95px;
-  }
   .menu {
     width: 95vw;
+  }
+  p {
+    font-size: 20px;
   }
   button {
     font-size: 20px;
@@ -297,9 +301,6 @@ button {
     height: 160px;
     width: 160px;
   }
-  .cards {
-    margin-left: 120px;
-  }
   .menu {
     width: 97vw;
   }
@@ -321,9 +322,6 @@ button {
   .cards .card {
     height: 200px;
     width: 200px;
-  }
-  .cards {
-    margin-left: 175px;
   }
   .menu {
     width: 95vw;
