--- a/main.scss
+++ b/main.scss
@@ -1,13 +1,14 @@
 * {
     margin: 0px;
-    padding:0px;
+    padding: 0px;
     box-sizing: border-box;
     font-family: sansita -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 main {
     background-color: #cd1076;
-    height:100vh;
+    height: 100vh;
+    width: 100vw;
     font-weight: bold;
     color:#421558 ;
 }
@@ -15,7 +16,7 @@ main {
 #top {
     text-align: center;
     background-color:#9acd32 ;
-    padding:5px;    
+    padding: 5px;    
 }
 
 .title {
@@ -28,32 +29,37 @@ main {
   line-height: 1em;
 }
 
+p{
+    font-size: 15px;
+}
+
 button {
-    width:15vw;
-    height:4vh;
+    width: 15vw;
+    height: 4vh;
     background-color:#ffd700;
     border-radius: 5px;
     color:#421558;
     font-weight: bold;
     font-size: 12px;
-    margin:5px;
 }
 
 .menu {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    padding: 15px;
-    width: 320px
+    justify-content: space-around;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    width: 100vw;
+    margin: 0 auto;
 }
 
 .cards{
     width:320px;;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin-left: 5px;
+    margin: 0 auto;
     text-align: center;
-    gap:3px;    
+    gap: 3px;    
 
    .card {  
         border:#9acd32 4px solid;
@@ -95,7 +101,7 @@ pointer-events: none;
 .finish {
     border: 2px #9acd32 solid;
     background-color: #ffd700;
-    width:200px;
+    width: 200px;
     height: 200px;
     display: unset;
 }
@@ -119,20 +125,20 @@ pointer-events: none;
 .modal-content {
     background-color: #ffd700;
     margin: auto;
-    padding: 25px;
+    padding: 15px;
     border: 1px solid #421558;
     border-radius: 20px;
-    height: 25%;
-    width: 67%;
+    height: 20%;
+    width: 68%;
     color: #421558;
-    font-size:26px;
+    font-size: 26px;
     font-weight: bold;
     text-align: center;
 }
 
 .close {
     color:#cd1076 ;
-    float: right;
+    float: center;
     font-size: 46px;
     font-weight: bold;
 }
@@ -143,13 +149,14 @@ pointer-events: none;
   text-decoration: none;
   cursor: pointer;
 }
-@media only screen and (min-width:375px) {
+@media only screen and (min-width: 375px) {
     .cards .card {
         height: 70px;
         width: 70px;
     } 
-    .cards {
-        margin-left:25px;
+    
+    .modal-content{
+        font-size: 30px;    
     }
 }
 @media only screen and (min-width:425px) {
@@ -159,15 +166,16 @@ pointer-events: none;
     } 
 
     .cards {    
-            width:380px;
+            width: 380px;
     }
 
         .menu {    
-        width:390px;
+        width: 390px;
     }
 
     .modal-content{
-        font-size: 30px;    
+        font-size: 30px;
+        width: 60%;    
     }
 }
 @media only screen and (min-width:490px) {
@@ -176,12 +184,9 @@ pointer-events: none;
         width: 90px;
     } 
 
-    .cards {    
-        margin-left: 40px;
-    }
-
     .modal-content{
-        font-size: 35px;    
+        font-size: 35px;   
+        width: 52%;
     }
 }
 @media only screen and (min-width:550px) {
@@ -191,12 +196,11 @@ pointer-events: none;
     } 
 
     .cards {    
-        width:500px;
-        margin-left:30px;
+        width: 500px;
     }
 
     .menu {    
-    width:500px;
+    width: 500px;
     }
 
     button{
@@ -204,7 +208,8 @@ pointer-events: none;
     }
 
     .modal-content{
-        font-size: 41px;    
+        font-size: 41px; 
+        width: 47%;   
     }
 }
 @media only screen and (min-width:600px) {
@@ -213,8 +218,7 @@ pointer-events: none;
         width: 120px;
     } 
     .cards {    
-        width:85vw;
-        margin-left: 35px;
+        width: 85vw;
     }
 
     .menu {    
@@ -224,6 +228,7 @@ pointer-events: none;
     .modal-content{
         padding: 44px;
         font-size: 36px;
+        width: 43%;
     }
 
     .close {
@@ -238,7 +243,7 @@ pointer-events: none;
 
     .modal-content{
         font-size: 52px;
-        height: 40% ;   
+        width: 39%; 
     }
 }
 @media only screen and (min-width:760px) {
@@ -248,8 +253,7 @@ pointer-events: none;
     } 
 
     .cards {    
-        width:80vw;
-        margin-left: 75px;
+        width: 80vw;
     }
 
     .menu {    
@@ -260,6 +264,7 @@ pointer-events: none;
         padding: 50px;
         font-size: 61px;
         height: 50%;
+        width: 34%;
     }
 
     .close {
@@ -271,12 +276,13 @@ pointer-events: none;
             height: 170px;
             width: 170px;
     } 
-    .cards {    
-        margin-left: 95px;
-    }
 
     .menu {    
     width:95vw;
+    }
+
+    p{
+        font-size: 20px;
     }
 
     button {
@@ -285,7 +291,7 @@ pointer-events: none;
     }
 
     main {
-        height:2000px;
+        height: 2000px;
     }
 
     .modal-content {
@@ -302,10 +308,6 @@ pointer-events: none;
     .cards .card {
         height: 160px;
         width: 160px;
-    }
-
-    .cards {    
-        margin-left:120px;
     }
 
     .menu {    
@@ -331,10 +333,6 @@ pointer-events: none;
         height: 200px;
         width: 200px;
     } 
-
-    .cards{    
-        margin-left:175px;
-    }
 
     .menu{    
     width:95vw;
